exercises/ex4-08/ex4-06/ex2-08-statefulsets/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project1-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: project1
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ex2-02-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: ex2-02-app
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001
