exercises/ex4-08/ex4-06/ex2-08-statefulsets/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project1-ing
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: project1-svc
                port:
                  number: 2345

          - path: /api/todos
            pathType: Prefix
            backend:
              service:
                name: ex2-02-svc
                port:
                  number: 2346
          - path: /crash
            pathType: Prefix
            backend:
              service:
                name: ex2-02-svc
                port:
                  number: 2346
